--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bluehousing-site-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gooleh.github.io/bluehousing-site-project",
+  "homepage": "https://bluehousing.co.kr",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
